Add new module dependencies to app configurations for officer, user, and facingweb applications

--- a/src/apps/appuser/package.json
+++ b/src/apps/appuser/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@pinia/nuxt": "catalog:",
     "fin-ready": "workspace:^",
+    "mdul-lineoa": "workspace:^",
+    "mdul-loanfast": "workspace:^",
+    "mdul-member": "workspace:^",
+    "mdul-newmembership": "workspace:^",
     "nuxt": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
