--- a/src/apps/appofficer/package.json
+++ b/src/apps/appofficer/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@pinia/nuxt": "catalog:",
     "fin-ready": "workspace:^",
+    "mdul-officerapp": "workspace:^",
     "nuxt": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
