Add salarycheck and deduction modules to Nuxt configuration and package.json

--- a/src/apps/facingweb/package.json
+++ b/src/apps/facingweb/package.json
@@ -16,7 +16,9 @@
     "mdul-counterloanfast": "workspace:^",
     "mdul-counterregister": "workspace:^",
     "mdul-counterverify": "workspace:^",
+    "mdul-deduction": "workspace:^",
     "mdul-finance": "workspace:^",
+    "mdul-salarycheck": "workspace:^",
     "nuxt": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
