feat: add XLSX export functionality to deduction and finance reports

--- a/src/apps/facingweb/package.json
+++ b/src/apps/facingweb/package.json
@@ -22,6 +22,10 @@
     "nuxt": "catalog:",
     "pinia": "catalog:",
     "vue": "catalog:",
-    "vue-router": "catalog:"
+    "vue-router": "catalog:",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/xlsx": "^0.0.36"
   }
 }
